mongo.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec: 
      containers:
        - name: mongodb
          image: mongo:8.0.4
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: service-mongo
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
